k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: ardortrip-backend
spec:
  type: ClusterIP
  selector:
    app: ardortrip-backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
